# mct

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: BigInt.h  CMakeLists.txt  Contour.cpp  Contour.h  GFileRawData.cpp  GFileRawData.h  MagneticEquilibrium.cpp  MagneticEquilibrium.h  Polynomial.h  Spdata.cpp  Spdata.h  Timer.h  Vec.h  Zernike.h  clap.h  util.h
lib/test/: Assertion.hpp  bigint-test.cpp  poly-test.cpp  util-test.cpp  vec-test.cpp  zernike-test.cpp
src/: Contour.cpp  GFileRawData.cpp  Spdata.cpp  Spdata.h  main.cpp
src/include/: Contour.hpp  GFileRawData.hpp  Spdata.hpp  Timer.h  Vec.hpp  clap.h  util.hpp
test/: Assertion.hpp  bigint-test.cpp  poly-test.cpp  read-test.cpp  read_test.cpp  util-test.cpp  util_test.cpp  vec-test.cpp  zernike-test.cpp
